Commit, finished v1.0 - What is this

--- a/What is this/Info.plist
+++ b/What is this/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>The App needs your camera</string>
 </dict>
 </plist>
